--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "author": "向阳 <xiangqian_liu@163.com>",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-vue": "^9.1.0",
     "vuepress": "^1.9.7"
   },
   "dependencies": {
