--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "blog",
   "main": "index.js",
   "scripts": {
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs",
+    "dev": "vuepress dev docs",
+    "build": "vuepress build docs",
     "deploy": "sh deploy.sh"
   },
   "repository": "git@github.com:lxqddd/blog.git",
